--- a/views/instructor/editCourse.ejs
+++ b/views/instructor/editCourse.ejs
@@ -106,45 +106,45 @@
 				<label for="courseName">Course name</label>
 				<input type="text" class="form-control" id="courseName" name="courseName" value="<%=course.course_name%>">
 			</div>
-		<div class="row py-2">
+			<div class="row py-2">
 
-			<div class="form-group col-md-2">
-				<label for="courseImage">Course image</label>
-				<div class="row ">
-					<div class="col-md-6 ">
-						<img id="image" class="course-image" src=<%=course.img_path%> alt="Image">
+				<div class="form-group col-md-2">
+					<label for="courseImage">Course image</label>
+					<div class="row ">
+						<div class="col-md-6 ">
+							<img id="image" class="course-image" src=<%=course.img_path%> alt="Image">
+						</div>
 					</div>
+					<input type="file" class="form-control-file" id="courseImage" name="image" onchange="readURL(this);">
 				</div>
-				<input type="file" class="form-control-file" id="courseImage" name="image" onchange="readURL(this);">
-			</div>
-			<div class="form-group col-md-4">
-				<label for="category">Category</label>
+				<div class="form-group col-md-4">
+					<label for="category">Category</label>
 
-				<select class="form-control" id="category" name="category">
-					
-					<option value="<%=course.Category.category_name%>" selected disabled hidden>
-						<%=course.Category.category_name%>
-					</option>
-					<% for(let i=0;i<category.length;i++) {%>
-						<option value="<%=category[i].category_name%>" selected>
-							<%=category[i].category_name%>
+					<select class="form-control" id="category" name="category">
+
+						<option value="<%=course.Category.category_name%>" selected disabled hidden>
+							<%=course.Category.category_name%>
 						</option>
-						<%}%>
-				</select>
+						<% for(let i=0;i<category.length;i++) {%>
+							<option value="<%=category[i].category_name%>" selected>
+								<%=category[i].category_name%>
+							</option>
+							<%}%>
+					</select>
+				</div>
+				<div class="form-group col-md-2">
+					<label for="price">Price</label>
+					<input type="number" class="form-control" id="price" name="price" value="<%=course.price%>">
+				</div>
+				<div class="form-group col-md-2">
+					<label for="concurency">Concurency</label>
+					<input type="text" class="form-control" id="concurency" name="concurency" value="<%=course.concurrency%>">
+				</div>
+				<div class="form-group col-md-2">
+					<label for="language">Language</label>
+					<input type="text" class="form-control" id="language" name="language" value="<%=course.course_language%>">
+				</div>
 			</div>
-			<div class="form-group col-md-2">
-				<label for="price">Price</label>
-				<input type="number" class="form-control" id="price" name="price" value="<%=course.price%>">
-			</div>
-			<div class="form-group col-md-2">
-				<label for="concurency">Concurency</label>
-				<input type="text" class="form-control" id="concurency" name="concurency" value="<%=course.concurrency%>">
-			</div>
-			<div class="form-group col-md-2">
-				<label for="language">Language</label>
-				<input type="text" class="form-control" id="language" name="language" value="<%=course.course_language%>">
-			</div>
-		</div>
 
 			<div class="form-group">
 				<label for="shortDescription">Short description</label>
@@ -158,7 +158,7 @@
 				<input type="text" id="fdcontent" name='fullDescription' hidden value="<%=course.full_description%>">
 
 			</div>
-			
+
 			<div class="center">
 				<input type="submit" class="btn btn-primary btn-save" data-form-id="formEditCourse<%=course.id%>"
 					value="Save" />
@@ -216,7 +216,7 @@
 										<li class="list-group-item dflex">
 											<span>Lesson <%=j+1%>:
 													<%=course.Chapters[i].Lessons[j].lesson_name%></span>
-											<ul class="list-inline m-0 dflexicon" >
+											<ul class="list-inline m-0 dflexicon">
 												<li class="list-inline-item">
 													<button class="btn btn-success btn-sm rounded-0 btn-edit" type="button" data-toggle="tooltip"
 														data-placement="top" data-form-id="editLesson<%=course.Chapters[i].Lessons[j].id%>"
@@ -239,13 +239,14 @@
 													method="post">
 													<div class="form-group">
 														<label for="lessonName<%=course.Chapters[i].Lessons[j].id%>">Lesson name</label>
-														<input type="text" class="form-control" id="lessonName<%=course.Chapters[i].Lessons[j].id%>" name="lessonName"
-															value="<%=course.Chapters[i].Lessons[j].lesson_name%>">
+														<input type="text" class="form-control" id="lessonName<%=course.Chapters[i].Lessons[j].id%>"
+															name="lessonName" value="<%=course.Chapters[i].Lessons[j].lesson_name%>">
 													</div>
 													<div class="form-group">
 														<label for="shortDescription<%=course.Chapters[i].Lessons[j].id%>">Short
 															description</label>
-														<textarea class="form-control" id="shortDescription<%=course.Chapters[i].Lessons[j].id%>" rows="3"
+														<textarea class="form-control" id="shortDescription<%=course.Chapters[i].Lessons[j].id%>"
+															rows="3"
 															name="shortDescription"><%=course.Chapters[i].Lessons[j].short_description%></textarea>
 													</div>
 													<div class="form-group">
@@ -361,8 +362,7 @@
 			<form method="post" id="formChapter" action="/instructor/addChapter/?course_id=<%=course.id%>">
 				<div class="form-group">
 					<label for="chapterName">Chapter name</label>
-					<input type="text" class="form-control" id="chapterName" placeholder=""
-						name="chapterName">
+					<input type="text" class="form-control" id="chapterName" placeholder="" name="chapterName">
 				</div>
 				<div class="form-group">
 					<label for="shortDescription">Short description</label>
@@ -443,7 +443,7 @@
 				document.getElementById(formId).style.display = 'block';
 
 				let id = formId.slice(9)
-				alert('add lesson of chapter' + id + '\n state of this chapter: ' + state[id])
+				// alert('add lesson of chapter' + id + '\n state of this chapter: ' + state[id])
 				if (formId.slice(0, 9) === 'addLesson' && state[id]) {
 					state[id] = !state[id];
 					// let content = <%- course.full_description?course.full_description.replace('&#34;','"'):'""'%>;
@@ -496,12 +496,23 @@
 					var form = $("#formChapter");
 					var url = form.attr('action');
 
+
+
 					$.ajax({
 						type: "POST",
 						url: url,
 						data: form.serialize(), // serializes the form's elements.
 						success: function (data) {
-							alert('Add' + data + 'success!'); // show response from the  script.
+							Swal.fire({
+								position: 'top-end',
+								icon: 'success',
+								title: 'Your work has been saved',
+								showConfirmButton: false,
+								timer: 1500
+							}).then(_ =>{
+								location.reload()
+							})
+
 						}
 					});
 				});
@@ -545,10 +556,11 @@
 						/* Read more about isConfirmed, isDenied below */
 						if (result.isConfirmed) {
 							let formId = $(this).attr("data-form-id")
-							alert(formId)
+
 							// var form = document.getElementById(formId)
 							var form = new FormData(document.getElementById(formId));
 							var url = $(form).attr('action');
+							// alert(formId + ' url '+ url )
 
 							$.ajax({
 								type: "POST",
@@ -560,7 +572,8 @@
 									console.log(errorMessage); // Optional
 								},
 								success: function (data) {
-									alert('Save' + data + 'success!'); // show response from the  script.
+									Swal.fire('Saved!', '', 'success')
+									location.reload()
 								}
 							});
 						} else if (result.isDenied) {
@@ -588,7 +601,7 @@
 					let formId = $(this).attr("data-form-id")//editLesson3 //editChapter0
 					// target = 'editLesson',
 					// id = formId.slice(10)
-					alert('edit ' + formId)
+					// alert('edit ' + formId)
 
 					// if (formId.slice(0, 11) === 'editChapter') {
 					// 	target = 'editChapter'
@@ -640,27 +653,44 @@
 				})
 
 				$(".btn-delete").click(function () {
-					let formId = $(this).attr("data-form-id")
-					let name = 'lesson_id',
-						id = formId.slice(6),
-						url = '/instructor/deleteLesson?' + name + '=' + id
+					Swal.fire({
+						title: 'Are you sure?',
+						text: "You won't be able to revert this!",
+						icon: 'warning',
+						showCancelButton: true,
+						confirmButtonColor: '#3085d6',
+						cancelButtonColor: '#d33',
+						confirmButtonText: 'Yes, delete it!'
+					}).then((result) => {
+						if (result.isConfirmed) {
+							let formId = $(this).attr("data-form-id")
+							let name = 'lesson_id',
+								id = formId.slice(6),
+								url = '/instructor/deleteLesson?' + name + '=' + id
 
-					if (formId.slice(0, 7) === 'chapter') {
-						name = 'chapter_id'
-						id = formId.slice(7)
-						url = '/instructor/deleteChapter?' + name + '=' + id
+							if (formId.slice(0, 7) === 'chapter') {
+								name = 'chapter_id'
+								id = formId.slice(7)
+								url = '/instructor/deleteChapter?' + name + '=' + id
 
-					}
-					alert('Delete ' + name + '=' + id)
+							}
+							$.ajax({
+								url: url,
+								type: 'DELETE',
+								data: { name: id },
+								success: function () {
+									Swal.fire(
+										'Deleted!',
+										'Your file has been deleted.',
+										'success'
+									)
+								}
+							});
 
-					$.ajax({
-						url: url,
-						type: 'DELETE',
-						data: { name: id },
-						success: function (result) {
-							alert('Delete ' + name + '=' + id + ' sucess!')
 						}
-					});
+					})
+
+
 
 
 					// $(`#${formId}`).toggle()
